# avogadrolibs

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .codacy.yaml  .gitignore  .gitmodules  .misspell-fixer.ignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CTestConfig.cmake  Contributors.md  LICENSE  PRIVACY.md  README  README.md  SECURITY.md  STYLE.md  appveyor.yml  cp2kinputdialog.cpp  cp2kinputdialog.h  cp2kinputdialog.ui  project.config  prtest.txt  pyproject.toml  qtaimcriticalpointlocator.cpp  qtaimcriticalpointlocator.h  qtaimcubature.cpp  qtaimcubature.h  qtaimengine.cpp  qtaimengine.h  qtaimextension.cpp  qtaimextension.h  qtaimlsodaintegrator.cpp  qtaimlsodaintegrator.h  (+11 more)
avogadro/: CMakeLists.txt
avogadro/calc/: CMakeLists.txt  LennardJones612_UniversalShifted.txt  chargemanager.cpp  chargemanager.h  chargemodel.cpp  chargemodel.h  defaultmodel.cpp  defaultmodel.h  energycalculator.cpp  energycalculator.h  energymanager.cpp  energymanager.h  energyoptimizer.cpp  energyoptimizer.h  flameminimize.cpp  flameminimize.h  gradients.h  lennardjones.cpp  lennardjones.h  lennardjonesdata.h  uff.cpp  uff.h  uffdata.h
avogadro/command/: CMakeLists.txt  avobabel.cpp  cell.cpp  cjsontocml.cpp  qube.cpp
avogadro/core/: CMakeLists.txt  angleiterator.cpp  angleiterator.h  angletools.h  array.h  atom.cpp  atom.h  atomtyper-inline.h  atomtyper.cpp  atomtyper.h  atomutilities.cpp  atomutilities.h  avogadrocore.h  avospglib.cpp  avospglib.h  basisset.h  bond.cpp  bond.h  color3f.h  connectedgroup.cpp  connectedgroup.h  constraint.h  contrastcolor.h  coordinateblockgenerator.cpp  coordinateblockgenerator.h  coordinateset.cpp  coordinateset.h  crystaltools.cpp  crystaltools.h  cube.cpp  cube.h  dihedraliterator.cpp  dihedraliterator.h  elementdata.h  elements.cpp  elements.h  extendedmoleculebase.h  gaussianset.cpp  gaussianset.h  gaussiansettools.cpp  (+58 more)
avogadro/io/: CMakeLists.txt  cjsonformat.cpp  cjsonformat.h  cmlformat.cpp  cmlformat.h  cmsgpackformat.cpp  cmsgpackformat.h  dcdformat.cpp  dcdformat.h  fileformat.cpp  fileformat.h  fileformatmanager.cpp  fileformatmanager.h  gromacsformat.cpp  gromacsformat.h  hdf5dataformat.cpp  hdf5dataformat.h  lammpsformat.cpp  lammpsformat.h  mdcrdformat.cpp  mdcrdformat.h  mdlformat.cpp  mdlformat.h  mmtfformat.cpp  mmtfformat.h  pdbformat.cpp  pdbformat.h  poscarformat.cpp  poscarformat.h  sdfformat.cpp  sdfformat.h  trrformat.cpp  trrformat.h  turbomoleformat.cpp  turbomoleformat.h  utilities.h  vaspformat.cpp  vaspformat.h  xyzformat.cpp  xyzformat.h
avogadro/molequeue/: CMakeLists.txt  batchjob.cpp  batchjob.h  inputgenerator.cpp  inputgenerator.h  inputgeneratordialog.cpp  inputgeneratordialog.h  inputgeneratordialog.ui  inputgeneratorwidget.cpp  inputgeneratorwidget.h  inputgeneratorwidget.ui  molequeuedialog.cpp  molequeuedialog.h  molequeuedialog.ui  molequeuemanager.cpp  molequeuemanager.h  molequeuequeuelistmodel.cpp  molequeuequeuelistmodel.h  molequeuewidget.cpp  molequeuewidget.h  molequeuewidget.ui
avogadro/protocall/: CMakeLists.txt  matrixserialization.cpp  matrixserialization.h  moleculedeserializer.cpp  moleculedeserializer.h  moleculeserializer.cpp  moleculeserializer.h  utils.h
avogadro/qtgui/: CMakeLists.txt  backgroundfileformat.cpp  backgroundfileformat.h  batchjob.cpp  batchjob.h  calcworker.cpp  calcworker.h  chartdialog.cpp  chartdialog.h  chartwidget.cpp  chartwidget.h  color3f.h  colorbutton.cpp  colorbutton.h  containerwidget.cpp  containerwidget.h  cube.cpp  cube.h  customelementdialog.cpp  customelementdialog.h  customelementdialog.ui  elementdetail_p.cpp  elementdetail_p.h  elementitem_p.cpp  elementitem_p.h  elementtranslator.cpp  elementtranslator.h  extensionplugin.cpp  extensionplugin.h  filebrowsewidget.cpp  filebrowsewidget.h  fileformatdialog.cpp  fileformatdialog.h  gaussiansetconcurrent.cpp  gaussiansetconcurrent.h  generichighlighter.cpp  generichighlighter.h  hydrogentools.cpp  hydrogentools.h  inputgenerator.cpp  (+92 more)
avogadro/qtopengl/: CMakeLists.txt  activeobjects.cpp  activeobjects.h  editglwidget.cpp  editglwidget.h  editor.cpp  editor.h  glwidget.cpp  glwidget.h  manipulator.cpp  manipulator.h  navigator.cpp  navigator.h  qttextrenderstrategy.cpp  qttextrenderstrategy.h
avogadro/qtplugins/: CMakeLists.txt  ballandstick.cpp  ballandstick.h  gamesshighlighter.cpp  gamesshighlighter.h  gamessinputdialog.cpp  gamessinputdialog.h  gamessinputdialog.ui  pluginfactory.h  pluginmanager.cpp  pluginmanager.h  quantuminput.cpp  quantuminput.h  vanderwaals.cpp  vanderwaals.h
avogadro/quantum/: CMakeLists.txt  basisset.cpp  basisset.h  gaussianset.cpp  gaussianset.h  slaterset.cpp  slaterset.h
avogadro/quantumio/: CMakeLists.txt  basissetloader.cpp  basissetloader.h  gamessukout.cpp  gamessukout.h  gamessus.cpp  gamessus.h  gaussiancube.cpp  gaussiancube.h  gaussianfchk.cpp  gaussianfchk.h  genericjson.cpp  genericjson.h  genericoutput.cpp  genericoutput.h  molden.cpp  molden.h  mopacaux.cpp  mopacaux.h  nwchemjson.cpp  nwchemjson.h  nwchemlog.cpp  nwchemlog.h  orca.cpp  orca.h  qcschema.cpp  qcschema.h
avogadro/rendering/: CMakeLists.txt  absoluteoverlayquadstrategy.cpp  absoluteoverlayquadstrategy.h  absolutequadstrategy.cpp  absolutequadstrategy.h  ambientocclusionspheregeometry.cpp  ambientocclusionspheregeometry.h  arcsector.cpp  arcsector.h  arcstrip.cpp  arcstrip.h  arrow_fs.glsl  arrow_vs.glsl  arrowgeometry.cpp  arrowgeometry.h  avogadrogl.h  avogadrorendering.h  beziergeometry.cpp  beziergeometry.h  camera.cpp  (+130 more)
boostpython/: CMakeLists.txt  core.cpp  io.cpp  main.cpp
docs/: CMakeLists.txt  conf.py  conf.py.in  credits.rst  doxyfile.in  index.rst  mainpage.dox  rendering.dox
python/: CMakeLists.txt  basisset.cpp  core.cpp  cube.cpp  exporters.h  io.cpp  main.cpp  molecule.cpp
tests/: CMakeLists.txt  arraytest.cpp  atomtest.cpp  bondtest.cpp  coordinatesettest.cpp  cpp11test.cpp  eigentest.cpp  elementtest.cpp  graphtest.cpp  moleculetest.cpp  ringperceivertest.cpp  variantmaptest.cpp  varianttest.cpp
(+1425 files in other folders)
